[package]
name = "steel-tui"
version = "0.1.0"
edition = "2024"
authors = ["Alvsch"]

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]

[dependencies]
steel = { git = "https://github.com/Steel-Foundation/SteelMC" }
steel-core = { git = "https://github.com/Steel-Foundation/SteelMC" }
steel-utils = { git = "https://github.com/Steel-Foundation/SteelMC" }
text_components = { git = "https://github.com/Steel-Foundation/TextComponents.git", features = [
    "custom",
    "nbt",
    "serde",
] }

ratatui = "0.30.0"
ansi-to-tui = "8.0.1"
tui-input = "0.15.0"
tui-scrollview = "0.6.2"

tokio = "1.49.0"
tokio-util = "0.7.18"
mimalloc = { version = "0.1.48", optional = true }
anyhow = "1.0.102"

tracing = "0.1.44"
tracing-subscriber = { version = "=0.3.19", features = ["chrono"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
absolute_paths = "warn"
missing_const_for_fn = "warn"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -3 }
