[package]
name = "steel-tui"
version = "0.1.0"
edition = "2024"
authors = ["Alvsch"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true

[features]
default = ["mimalloc"]
mimalloc = ["dep:mimalloc"]
plugin = ["dep:steel-host", "dep:steel-plugin-sdk", "dep:rmp-serde"]

[dependencies]
steel = { git = "https://github.com/Alvsch/SteelMC", branch = "plugin-api" }
steel-core = { git = "https://github.com/Alvsch/SteelMC", branch = "plugin-api" }
steel-utils = { git = "https://github.com/Alvsch/SteelMC", branch = "plugin-api" }
text_components = { git = "https://github.com/Steel-Foundation/TextComponents", features = [
    "custom",
    "nbt",
    "serde",
] }
steel-host = { git = "https://github.com/Alvsch/steel-plugin", branch = "master", optional = true }
steel-plugin-sdk = { git = "https://github.com/Alvsch/steel-plugin", branch = "master", optional = true }

ratatui = "0.30.0"
ansi-to-tui = "8.0.1"
tui-input = "0.15.3"
tui-scrollview = "0.6.4"

tokio = "1.52.1"
tokio-util = "0.7.18"
mimalloc = { version = "0.1.50", optional = true }
rmp-serde = { version = "1.3.1", optional = true }
anyhow = "1.0.102"
replace_with = "0.1.8"
flume = "0.12.0"
uuid = { version = "1.23.1", features = ["v4"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["chrono"] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
single_call_fn = "allow"
multiple_inherent_impl = "allow"
shadow_unrelated = "allow"
missing_errors_doc = "allow"
struct_excessive_bools = "allow"
needless_pass_by_value = "allow"
cargo_common_metadata = "allow"
cast_sign_loss = "allow"
cast_possible_wrap = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
absolute_paths = "warn"
missing_const_for_fn = "warn"

all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -2 }
unwrap_used = { level = "warn", priority = -3 }
